# QtTestBug124166

./: .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
